[gd_scene load_steps=3 format=3 uid="uid://c31en36nnfg61"]

[ext_resource type="Script" path="res://TestArea.gd" id="1_qynt6"]
[ext_resource type="Texture2D" uid="uid://dqxjrb3odtgir" path="res://assets/crosshairs/crosshair002.png" id="2_uxsuk"]

[node name="TestArea" type="Node2D"]
script = ExtResource("1_qynt6")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(130, 291)
color = Color(0.384314, 0, 1, 1)

[node name="Sprite2D" type="Sprite2D" parent="Polygon2D"]
texture = ExtResource("2_uxsuk")

[node name="Label" type="Label" parent="Polygon2D"]
offset_left = -66.0
offset_top = 148.0
offset_right = -26.0
offset_bottom = 171.0

[node name="Label2" type="Label" parent="Polygon2D"]
offset_left = -51.0
offset_top = -186.0
offset_right = 47.0
offset_bottom = -163.0
text = "Green's Theorem
Your version"
horizontal_alignment = 1

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2(697, 292)
color = Color(0.486275, 0.894118, 0.137255, 1)

[node name="Sprite2D" type="Sprite2D" parent="Polygon2D2"]
texture = ExtResource("2_uxsuk")

[node name="Label" type="Label" parent="Polygon2D2"]
offset_left = -66.0
offset_top = 148.0
offset_right = -26.0
offset_bottom = 171.0

[node name="Label2" type="Label" parent="Polygon2D2"]
offset_left = -44.0
offset_top = -182.0
offset_right = 41.0
offset_bottom = -159.0
text = "Green's Theorem
My version"
horizontal_alignment = 1

[node name="Polygon2D3" type="Polygon2D" parent="."]
position = Vector2(977, 292)
color = Color(1, 0.337255, 0.0862745, 1)

[node name="Sprite2D" type="Sprite2D" parent="Polygon2D3"]
texture = ExtResource("2_uxsuk")

[node name="Label" type="Label" parent="Polygon2D3"]
offset_left = -66.0
offset_top = 148.0
offset_right = -26.0
offset_bottom = 171.0

[node name="Label2" type="Label" parent="Polygon2D3"]
offset_left = -45.0
offset_top = -179.0
offset_right = -5.0
offset_bottom = -156.0
text = "Triangulation method"

[node name="Polygon2D4" type="Polygon2D" parent="."]
position = Vector2(414, 292)
color = Color(1, 1, 0.054902, 1)

[node name="Sprite2D" type="Sprite2D" parent="Polygon2D4"]
texture = ExtResource("2_uxsuk")

[node name="Label" type="Label" parent="Polygon2D4"]
offset_left = -66.0
offset_top = 148.0
offset_right = -26.0
offset_bottom = 171.0
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Polygon2D4"]
offset_left = -69.0
offset_top = -188.0
offset_right = 103.0
offset_bottom = -165.0
text = "Convex Hull Average"
metadata/_edit_use_anchors_ = true
